<resources>
    <string name="app_name">Android</string>
    <string name="logo">Slurp Logo</string>
    <string name="eat_in">EAT IN</string>
    <string name="eat_in_icon">Eat In Icon</string>
    <string name="take_out_icon">Take Out Icon</string>
    <string name="take_out">TAKE OUT</string>
    <string name="choose_how_you_d_like_to_enjoy_your_meal">Choose how you\'d like to enjoy your meal</string>
    <string name="main_vector">Figure on the main screen</string>
    <string name="ramen">Ramen</string>
    <string name="rice">Rice</string>
    <string name="udon">Udon</string>
    <string name="menu_item_image">image</string>
    <string name="add_to_basket_button">Add to basket</string>
    <string name="preparing">Preparing</string>
    <string name="serving">Serving</string>
    <string name="check_your_order_status_here">Check your order status here!</string>
    <string name="in_prepare">In Prepare</string>
    <string name="order_id">Order ID</string>
    <string name="successfullyAddedToCart">The product has been added to the cart</string>
    <string name="action_cart">Basket</string>
    <string name="basket_header">Basket</string>
    <string name="quantityInputError">Quantity must be a number greater than 0</string>
    <string name="check_out">Check Out</string>
    <string name="default_total_value">Total: $0.00</string>
    <string name="empty_basket_message">Your basket is empty</string>
    <string name="checkout_header">Finalize the order</string>
    <string name="no_items_in_cart">No items in cart</string>
    <string name="name">Name</string>
    <string name="e_mail">E-mail</string>
    <string name="email_hint">Enter your e-mail</string>
    <string name="name_hint">Enter your name</string>
    <string name="payment">Payment</string>
    <string name="WS_Server_URL">ws://10.0.2.2:8080/ws</string>
    <string name="please_enter_a_valid_name">Please enter a valid name</string>
    <string name="please_enter_a_valid_email">Please enter a valid e-mail</string>
    <string name="order_header">Order</string>
    <string name="please_wait">Please wait</string>
    <string name="board_code_label">NUMBER</string>
    <string name="waiting_board">Waiting Board</string>
    <string name="board">BOARD</string>
    <string name="orders">ORDERS</string>
    <string name="lastTen">Showing last 10 orders</string>
    <string name="failed_to_create_order">"Failed to create order: "</string>
    <string name="network_error">"Network error: "</string>
    <string name="no_orders_available">Empty order history</string>
    <string name="msg_subscribed">Succesfully subscribed to topic</string>
    <string name="msg_subscribe_failed">Subscription failed</string>
</resources>