<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/textViewTotalPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        android:fontFamily="@font/roboto"
        android:layout_marginBottom="10dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:textSize="16sp"
        android:textColor="@android:color/black"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="20dp"/>

    <EditText
        android:id="@+id/editTextName"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:autofillHints=""
        android:inputType="text"
        android:padding="8dp"
        android:hint="@string/name_hint"
        android:background="@drawable/edit_text_background"
        android:fontFamily="@font/roboto"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/e_mail"
        android:textSize="16sp"
        android:textColor="@android:color/black"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="4dp"/>

    <EditText
        android:id="@+id/editTextEmail"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:autofillHints=""
        android:hint="@string/email_hint"
        android:inputType="textEmailAddress"
        android:padding="8dp"
        android:background="@drawable/edit_text_background"
        android:fontFamily="@font/roboto"
        android:layout_marginBottom="15dp"/>

    <TextView
        android:id="@+id/errorTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/holo_red_dark"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:layout_gravity="center"
        />

    <TextView
        android:id="@+id/textViewPleaseWait"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/please_wait"
        android:textSize="16sp"
        android:textColor="#FDA403"
        android:visibility="gone"
        android:gravity="center"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"/>

    <Button
        android:id="@+id/buttonPayment"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/payment"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        android:background="@drawable/button_add_to_basket"
        android:layout_marginTop="10dp"
        android:layout_gravity="center"
        android:gravity="center"
        />


</LinearLayout>
