<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FDA403">
    <ImageView
        android:id="@+id/logoImage"
        android:layout_width="200dp"
        android:layout_height="0dp"
        android:src="@drawable/logo"
        android:contentDescription="@string/logo"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.5"
        />


    <FrameLayout
        android:id="@+id/bottomFrame"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:background="@drawable/top_corner_shape"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/logoImage"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        >


        <ImageView
            android:layout_width="290dp"
            android:layout_height="286dp"
            android:src="@drawable/niebieskiznak"
            android:layout_gravity="center"
            android:contentDescription="@string/main_vector" />

        <LinearLayout
            android:id="@+id/choiceContainer"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:gravity="center">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:baselineAligned="false"
                android:orientation="horizontal"
                android:weightSum="2"
                android:padding="16dp"
                tools:ignore="UselessParent">

                <LinearLayout
                    android:id="@+id/eatInButton"
                    android:layout_width="0dp"
                    android:layout_height="180dp"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:background="@drawable/rounded_button_background"
                    android:gravity="center"
                    android:clickable="true"
                    android:focusable="true"
                    android:layout_marginEnd="8dp"
                    android:foreground="?android:attr/selectableItemBackground">

                    <ImageView
                        android:layout_width="64dp"
                        android:layout_height="64dp"
                        android:src="@drawable/eatin"
                        android:contentDescription="@string/eat_in_icon"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/eat_in"
                        android:fontFamily="@font/sen"
                        android:textFontWeight="600"
                        android:textSize="24sp"
                        android:layout_marginTop="8dp"/>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/takeOutButton"
                    android:layout_width="0dp"
                    android:layout_height="180dp"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:background="@drawable/rounded_button_background"
                    android:padding="16dp"
                    android:gravity="center"
                    android:clickable="true"
                    android:focusable="true"
                    android:layout_marginStart="8dp"
                    android:foreground="?android:attr/selectableItemBackground">

                    <ImageView
                        android:layout_width="64dp"
                        android:layout_height="64dp"
                        android:src="@drawable/takeout"
                        android:contentDescription="@string/take_out_icon"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/take_out"
                        android:textSize="24sp"
                        android:fontFamily="@font/sen"
                        android:textFontWeight="600"
                        android:layout_marginTop="8dp"/>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </FrameLayout>
    <TextView
        android:id="@+id/footerText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/sen"
        android:text="@string/choose_how_you_d_like_to_enjoy_your_meal"
        android:textSize="16sp"
        android:textColor="@android:color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="16dp"/>
    


</androidx.constraintlayout.widget.ConstraintLayout>
