<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.BasketActivity"
    android:background="#FDA403">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/logoImage"
        android:layout_width="150dp"
        android:layout_height="0dp"
        android:layout_marginTop="4dp"
        android:contentDescription="@string/logo"
        android:src="@drawable/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.2"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <FrameLayout
        android:id="@+id/recyclerContainer"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/logoImage"
        app:layout_constraintBottom_toTopOf="@id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerViewBasketItems"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/rounded_recycler_background"
            android:padding="16dp" />

        <TextView
            android:id="@+id/emptyBasketMessage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/empty_basket_message"
            android:textSize="16sp"
            android:textColor="@android:color/black"
            android:layout_gravity="center"
            android:visibility="gone" />
    </FrameLayout>

    <View
        android:id="@+id/linearLayoutSeparator"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#37C9F5"
        app:layout_constraintBottom_toTopOf="@id/linearLayout" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="#FFFFFF"
        android:padding="10dp"
        android:gravity="center_vertical">

        <TextView
            android:id="@+id/textViewTotal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textStyle="bold"
            android:textSize="18sp"
            android:text="@string/default_total_value"
            android:textColor="@android:color/black" />

        <Button
            android:id="@+id/buttonCheckout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/check_out"
            android:textStyle="bold"
            android:textColor="#ffffff"
            android:background="@drawable/button_add_to_basket" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
