<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#FDA403">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/logoImage"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:contentDescription="@string/logo"
        android:src="@drawable/logo"
        android:layout_gravity="center" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:baselineAligned="false"
        android:orientation="horizontal"
        android:background="@drawable/top_corner_shape"
        android:padding="16dp">

        <!-- "In Prepare" Column -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"

            tools:ignore="NestedWeights">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/in_prepare"
                android:textStyle="bold"
                android:textSize="24sp"
                android:padding="8dp"
                android:layout_margin="8dp"

                android:textColor="@android:color/holo_orange_light"
                android:background="@drawable/inprepare_border"

                />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/inPrepareRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"/>
        </LinearLayout>

        <!-- "Ready" Column -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/serving"
                android:textStyle="bold"
                android:textSize="24sp"
                android:padding="8dp"
                android:layout_margin="8dp"
                android:textColor="@android:color/white"
                android:background="@drawable/serving_border"
                android:layout_marginBottom="8dp"
                />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/readyRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"/>
        </LinearLayout>
    </LinearLayout>

    <!-- Status Text -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="20sp"
        android:padding="16dp"
        android:text="@string/check_your_order_status_here"
        android:background="@color/white"
        android:textColor="@color/black"/>

</LinearLayout>
